# ChillFlix

./: README.md
Web/frontend/src/pages/Admin/: EditDeleteOperationPanel.js
android/app/src/main/java/com/example/androidchillflix/main/ViewModel/: CategoryData.java  MovieData.java  PromotedCategories.java
android/app/src/main/java/com/example/androidchillflix/main/activities/: CategoryActivity.java  (+5 more)
android/app/src/main/res/layout/: activity_add_movie.xml  activity_edit_movie.xml
android/app/src/main/res/values/: strings.xml
src/: AddCommand.h  App.h  CMakeLists.txt  ConsoleMenu.h  DataManagement.cpp  HelpCommand.cpp  HelpCommand.h  ICommand.h  RecommendCommand.h  Users.cpp  Users.h
src/Tests/: RecommendCommandTests.cpp
v1/: .gitignore
v1/src/: AddCommand.cpp  App.cpp  ConsoleMenu.cpp  DataManagement.h  Dockerfile  Main.cpp  Movies.h  RecommendCommand.cpp  app
v1/src/Tests/: AddCommandTests.cpp
v2.0/: .gitignore  README.md
v2.0/src/: CMakeLists.txt  Dockerfile
v2.0/src/Commands/: DELETECommand.cpp
v2.0/src/Core/: ServerManager.cpp  ServerManager.h
v2.0/src/Models/: Users.cpp  Users.h
v3.0/: README.md  docker-compose.yml
v3.0/src/MongoServer/: app.js  package-lock.json  package.json
v3.0/src/MongoServer/controllers/: movie.js  tokens.js  user.js  verify.js
v3.0/src/MongoServer/models/: movie.js  user.js
v3.0/src/MongoServer/routes/: movie.js  user.js
v3.0/src/MongoServer/services/: category.js  movie.js  user.js
v4.0/Web/backend/src/MongoServer/controllers/: upload.js
v4.0/Web/frontend/src/pages/Admin/: AddOperation.js
(+34 files in other folders)
